# lz77_project

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
results/: decomp.txt  result.lz77
src/: input_output.rs  lib.rs  lz_77.rs  main.rs
